2007-11-30  Andreas Kirschbaum

	* Correctly display negative stat values.

2007-09-17  Andreas Kirschbaum

	* Fix out of memory errors due to face cache. Now unused faces are
	purged from the in-memory cache.

2007-09-13  Andreas Kirschbaum

	* Accelerate map processing code.

2007-08-29  Andreas Kirschbaum

	* Make left-click in spellbelt work.

	* Fix oversized tooltip windows.

	* Update spellbelt when the chracter learns or forgets a spell.

	* Sort the spell belt by spell path and spell name.

	* In the spell belt, display only spells actually known by the
	character.

2007-08-27  Andreas Kirschbaum

	* Add tooltips for resistances and stat gauges.

	* Update inventory and ground views when pictures become
	available.

2007-08-06  Andreas Kirschbaum

	* Fix crash in animation handling code.

	* Fix stat/resistance display for negative values.

	* Improve metaserver selection window: always include "localhost"
	entry; do not crash for parsing errors.

2007-08-02  Andreas Kirschbaum

	* Fix word wrapping in log window.

2007-08-01  Andreas Kirschbaum

	* Implement media tags; don't use book popup windows for anything
	else than books.

2007-07-26  Andreas Kirschbaum

	* Add the server hostname and player name to the window title.

	* Make sure the window interior has the correct size.

	* Make the main window non-resizable and center it on the screen.

	* Move HP/SP/GR/FP text display below the gauges.

	* Add tooltips for spellbelt and spelllist.

	* Increase font sizes and remove unnecessary text information.

	* Add option --server to skip the metaserver window.

	* Rename option -opengl to --opengl.

2007-07-25  Andreas Kirschbaum

	* Fix CTRL key handling when switching between applications
	with (for example) CTRL+ALT+direction key.

2007-07-24  Andreas Kirschbaum

	* Fix player and weapon speed display.

	* Implement client-side animations in map window.

2007-07-05  Andreas Kirschbaum

	* Add option -N to disable full-screen mode/enable windowed mode.
