@@ -1,3 +1,8 @@
+2007-12-02  Andreas Kirschbaum
+
+	* In server selection dialog, make ENTER in hostname field execute
+	"Connect".
+
 2007-11-30  Andreas Kirschbaum
 
 	* Correctly display negative stat values.
